# 3D-stuff

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  export_model.py  glb2model.py  imgui.ini  transform.h
assets/materials/: color.material  test.material  water.material
assets/models/: cube.model  plane.model  sphere.model
assets/shaders/: basic.shader  blinn_phong.shader  color.shader  debug.shader  lambertian_diffuse.shader  texture.shader  texture_coordinates.shader  water.shader
include/glad/: glad.h
src/: batcher.cpp  batcher.cpp.no  batcher.h  camera.cpp  camera.h  debug_visualizer.cpp  debug_visualizer.h  glad.c  index_buffer.cpp  index_buffer.h  instance.cpp  instance.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  ray.cpp  ray.h  render_pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
